--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GRUPO 4B</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <style>
+        .git-ok:hover  {
+            animation: tada; 
+            animation-duration: .9s; 
+        }
+        .git-no:hover{
+            animation: wobble;
+            animation-duration: .9s;
+        }
+    </style></head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6 offset-md-3">
+            <div class="col-md-2">
+                <img src="./4b-qr.png" class="img-fluid" alt="">
+                <p class="text-center"><small>robinson.cortes@riwi.io</small></p>
+            </div>
+            <div class="col-md-6">
                 <div class="table-responsive">
                     <table class="table table-striped table-hover table-sm">
                         <thead>
@@ -21,107 +36,107 @@
                         <tbody>
                             <tr>
                                 <td>Juan Pablo Alvarez Gallego</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Richard Fernando Calle Giraldo</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Santiago Cardona Suarez</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Yasser Sebastian Castañeda Vargas</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Juan Diego Correa Vergara</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Vladimir Alejandro Garcia Murillo</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Andrés Gomez Gallo</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Jose Miguel Guillen Toledo</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Daniel Esteban Hurtado Carmona</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Duvian Andres Lopez Ceballos</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Alejandro Lozano Gómez</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Manuela Madrid Vasco</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Samuel Mendoza Castrillon</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Angeli Mendoza Villada</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>David Andres Monterrosa Gulfo</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Daniel Alberto Montiel Martínez	</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Henry Gabriel Mosquera Andrade</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Jose Manuel Osorio Calderon	</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Tiffany Shannaya Peñaranda Giraldo	</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Sebastian Ramirez Garcia</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>David Rico Varela</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Alejandro Sarrazola Ruiz</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Juan David Usuga Zapata</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Alesson Villa Usuga</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Alesson Villa Usuga</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
                                 <td>Bryan Zapata Gaviria</td>
-                                <td><a href="">Pendiente</a></td>
+                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             
 
