add santiago, daniel

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                             </tr>
                             <tr>
                                 <td>Santiago Cardona Suarez</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td> 
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://scardonasu.github.io/Ejercicio_Portfolio/">scardonasu</a></td>
                             </tr>
                             <tr>
                                 <td>Yasser Sebastian Castañeda Vargas</td>
@@ -68,7 +70,10 @@
                             </tr>
                             <tr>
                                 <td>Daniel Esteban Hurtado Carmona</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://dani20232024.github.io/ejercicios-riwi/portafolio.html">dani20232024</a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Duvian Andres Lopez Ceballos</td>
@@ -124,7 +129,9 @@
                             </tr>
                             <tr>
                                 <td>Juan David Usuga Zapata</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://deklanbeckett.github.io/ejerciciosriwi/trabajos.html">deklanbeckett</a></td>
                             </tr>
                             <tr>
                                 <td>Alesson Villa Usuga</td>
