--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                             </tr>
                             <tr>
                                 <td>Richard Fernando Calle Giraldo</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://richcalg.github.io/4b/"></a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Santiago Cardona Suarez</td>
