--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <td>Richard Fernando Calle Giraldo</td>
                                 <td>
                                     <i class="fa-brands fa-github git-ok"></i>
-                                    <a target="_blank" href="https://richcalg.github.io/4b/"></a>
+                                    <a target="_blank" href="https://richcalg.github.io/4b/">richcalg</a>
                                 </td>
                             </tr>
                             <tr>
@@ -108,7 +108,9 @@
                             </tr>
                             <tr>
                                 <td>Henry Gabriel Mosquera Andrade</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://henryandalejandro.github.io/EJERCICIO-RIWI/portafolio.html">henryandalejandro</a></td>
                             </tr>
                             <tr>
                                 <td>Jose Manuel Osorio Calderon	</td>
