--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
                             </tr>
                             <tr>
                                 <td>Sebastian Ramirez Garcia</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://seebasvipp.github.io/repositorio-riwi-4B-sebastian-ramirez/portafolio.html">
+                                        seebasvipp
+                                </a>
+                            </td>
                             </tr>
                             <tr>
                                 <td>David Rico Varela</td>
