--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
                             </tr>
                             <tr>
                                 <td>Angeli Mendoza Villada</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://angeli77.github.io/portafolio_entrega/portafolio.html">
+                                        angeli77
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>David Andres Monterrosa Gulfo</td>
