add david andres

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
                             </tr>
                             <tr>
                                 <td>David Andres Monterrosa Gulfo</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://david01php.github.io/ejercicios-riwi/portafolio/">
+                                        David01PHP
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Daniel Alberto Montiel Martínez	</td>
