--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                         <tbody>
                             <tr>
                                 <td>Juan Pablo Alvarez Gallego</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td> <i class="fa-brands fa-github git-ok"></i> 
+                                    <a target="_blank" href="https://juanp24alvarez.github.io/Ejercicio_Portafolio/Portafolio/">
+                                         juanp24alvarez
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Richard Fernando Calle Giraldo</td>
