--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
                             </tr>
                             <tr>
                                 <td>Manuela Madrid Vasco</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://manuelamadrid.github.io/Instagram-proyecto/portafolio.html">
+                                    manuelamadrid
+                                </a>
+                            </td>
                             </tr>
                             <tr>
                                 <td>Samuel Mendoza Castrillon</td>
