--- a/index.html
+++ b/index.html
@@ -61,19 +61,21 @@
                             </tr>
                             <tr>
                                 <td>Juan Diego Correa Vergara</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://juandiego9920.github.io/html-riwi/">
+                                        juandiego9920
+                                     </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Vladimir Alejandro Garcia Murillo</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Andrés Gomez Gallo</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Jose Miguel Guillen Toledo</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a href="https://vladimiryx2.github.io/ejercicios_riwi/portafolio.html" target="_blank">
+                                        vladimiryx2
+                                </a>
+                            </td>
                             </tr>
                             <tr>
                                 <td>Daniel Esteban Hurtado Carmona</td>
@@ -84,11 +86,12 @@
                             </tr>
                             <tr>
                                 <td>Duvian Andres Lopez Ceballos</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Alejandro Lozano Gómez</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a href="https://duvian423.github.io/ejerciciosriwi/ejercicio3.html" target="_blank">
+                                        duvian423
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Manuela Madrid Vasco</td>
@@ -122,10 +125,6 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Daniel Alberto Montiel Martínez	</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            <tr>
                                 <td>Henry Gabriel Mosquera Andrade</td>
                                 <td>
                                     <i class="fa-brands fa-github git-ok"></i>
@@ -136,25 +135,20 @@
                                 <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
                             <tr>
-                                <td>Tiffany Shannaya Peñaranda Giraldo	</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Sebastian Ramirez Garcia</td>
+                                <td>David Rico Varela</td>
                                 <td>
                                     <i class="fa-brands fa-github git-ok"></i>
-                                    <a target="_blank" href="https://seebasvipp.github.io/repositorio-riwi-4B-sebastian-ramirez/portafolio.html">
-                                        seebasvipp
-                                </a>
-                            </td>
-                            </tr>
-                            <tr>
-                                <td>David Rico Varela</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                    <a target="_blank" href="https://davidrv999.github.io/proyectoportafolio/TRABAJOSHTML/portafolio.html">
+                                        davidrv999
+                                    </a></td>
                             </tr>
                             <tr>
                                 <td>Alejandro Sarrazola Ruiz</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
+                                <td>
+                                    <i class="fa-brands fa-github git-ok"></i>
+                                    <a target="_blank" href="https://alejoruiiz.github.io/Ejercicios-Riwi/Portafolio.html">
+                                    alejoruiiz
+                                </a></td>
                             </tr>
                             <tr>
                                 <td>Juan David Usuga Zapata</td>
@@ -166,16 +160,6 @@
                                 <td>Alesson Villa Usuga</td>
                                 <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
                             </tr>
-                            <tr>
-                                <td>Alesson Villa Usuga</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td>Bryan Zapata Gaviria</td>
-                                <td><a href=""><i class="fa-regular fa-face-sad-cry git-no"></i></a></td>
-                            </tr>
-                            
-
                         </tbody>
                     </table>
                 </div>
